<resources>
    <string name="app_name">ClientsApp</string>
    <string name="test_name">Test_Name</string>
    <string name="test_id">Test_Id</string>
    <string name="test_address">Test_Address</string>
    <string name="todo">TODO</string>
    <string name="add">ADD</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
</resources>
